--- a/test/unit/search/CMakeLists.txt
+++ b/test/unit/search/CMakeLists.txt
@@ -7,3 +7,4 @@ seqan3_test (search_configuration_test.cpp)
 seqan3_test (search_scheme_algorithm_test.cpp)
 seqan3_test (search_scheme_test.cpp)
 seqan3_test (search_test.cpp)
+seqan3_test (search_ng_test.cpp)
